--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Dibaloke Chanda"
 title_separator          : "-"
 name                     : &name "Dibaloke Chanda"
-description              : &description "Graduate Student at Marquette Student. Researching in vision+x models and interpretability"
+description              : &description "Graduate Student at Marquette University. Researching in vision+x models and interpretability"
 url                      : https://dibaloke.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dibaloke/dibaloke.github.io"
