--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Dibaloke Chanda"
   pronouns         : # example: "she/her"  
-  bio              : "Graduate Student at Marquette Student. Researching in vision+x models and interpretability"
+  bio              : "Graduate Student at Marquette University. Researching in vision+x models and interpretability"
   location         : "Milwaukee, WI"
   employer         : "Marquette University"
   uri              : # URL
